change swagger & add deps
